--- a/demo/demo1_astig_npc/train_params_demo1.yaml
+++ b/demo/demo1_astig_npc/train_params_demo1.yaml
@@ -9,7 +9,7 @@ Camera:
   baseline: 100.0  # Final offset added to the image
 PSF_model:
   z_scale: 700
-  simulate_method: vector # 'spline' or 'vector'
+  simulate_method: spline # 'spline' or 'vector'
   spline_psf:
     calibration_file: ../../calibrate_mat/Astigmatism_Tetraspeck_beads_2um_50nm_256_1_MMStack_Pos0.ome_3dcal.mat  #Please give an relative path.
     psf_extent:
@@ -46,8 +46,8 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 4000
   - 40000
-  result_path: ../../results/liteloc_demo1_calibrate_python/  # Please give a relative path. Path to save trained model
-  infer_data: #../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
+  result_path: ../../results/liteloc_demo1_test_0401/  # Please give a relative path. Path to save trained model
+  infer_data: ../../datasets/NPC_U2OS_Astigmatism_PSF_640_40mw_20ms_256_2/NPC_U2OS_640_40mw_20ms_256_2_MMStack_Pos0.ome.tif # Please give an absolute path. Path of experimental data
   bg: 211  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
   pn_factor: 0.2  # Should be in the range of [0,1], which implies PV degree of the added Perlin nonuniform background, set it small when experimental background looks uniform.
