--- a/demo/demo2_tetrapod_npc/train_params_demo_fig3d.yaml
+++ b/demo/demo2_tetrapod_npc/train_params_demo_fig3d.yaml
@@ -46,7 +46,7 @@ Training:
   photon_range:  # Minimum and maximum possible photon numbers that could be assigned to each single molecule during training.
   - 2000
   - 20000
-  result_path: ../../results/liteloc_fig3d/  # Please give an relative path. Path to save trained model
+  result_path: ../../results/liteloc_fig3d_test/  # Please give an relative path. Path to save trained model
   infer_data:  ../../datasets/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3/NPC_NUP96_SNAP647_DMO_6um_defoucs_0_20ms_3_MMStack_Pos0.ome.tif  # Please give an absolute path. Path of experimental data
   bg: null  # Only if 'infer_data' is null, bg will be loaded by this variable.
   perlin_noise: True  # Whether add the perlin noise to the uniform background `backg` to simulate non-uniform background.
